kubeapps/kubeapps-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubeapps 
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - k.thedoodleproject.org
    secretName: tls-secret
  rules:
  - host: k.thedoodleproject.org
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeapps-kubeapps
          servicePort: 80
